<resources>
    <string name="app_name">Spotify UI Clone</string>
    <string name="logo">logoIcon</string>
    <string name="logInTitle">Millions of songs \nFree on Spotify.</string>
    <string name="sign_up_btn">Sign up free</string>
    <string name="login_google_btn">Continue with Google</string>
    <string name="login_facebook_btn">Continue with Facebook</string>
    <string name="login_apple_btn">Continue with Apple</string>
    <string name="log_in_btn">Log in</string>
    <string name="fab_content_desc">icon\n</string>
    <string name="content_description_end_icon">end icon</string>
    <string name="content_description_media">image artist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>