<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LogIn">

    <ImageView
        android:id="@+id/bgImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="450dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:rotation="17"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_login"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:paddingBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/spotify_icon"
            app:tint="#FFFFFF"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="235dp" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/logInTitle"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadlineMedium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="4dp"
            android:backgroundTint="#1ed760"
            android:text="@string/sign_up_btn"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="@color/md_theme_dark_background" />

        <Button
            android:id="@+id/googleButton"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="4dp"
            android:text="@string/login_google_btn"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="@color/white"
            app:icon="@drawable/ic_google"
            app:iconTint="@null" />

        <Button
            android:id="@+id/facebookButton"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="4dp"
            android:text="@string/login_facebook_btn"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="@color/white"
            app:icon="@drawable/ic_facebook"
            app:iconTint="@null" />

        <Button
            android:id="@+id/appleButton"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="4dp"
            android:text="@string/login_apple_btn"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="@color/white"
            app:icon="@drawable/ic_apple"
            app:iconTint="@null" />

        <Button
            android:id="@+id/logInButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/log_in_btn"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>